Next release
============

- Fixed a failing unittest caused by differing mimetypes on various
  OS platforms. See https://github.com/Pylons/pyramid/issues/1405

- Overall improvments for the ``proutes`` command. Added ``--format`` and
  ``--glob`` arguments to the command, introduced the ``method``
  column for displaying available request methods, and improved the ``view``
  output by showing the module instead of just ``__repr__``.
  See: https://github.com/Pylons/pyramid/pull/1542

- The ``pyramid.renderers.JSONP`` renderer would raise an exception if used
  without a request object. It will now fallback to behave like
  the ``pyramid.renderers.JSON`` renderer if there is no request object to
  derive a callback from. See https://github.com/Pylons/pyramid/pull/1562

- Prevent "parameters to load are deprecated" ``DeprecationWarning``
  from setuptools>=11.3. See https://github.com/Pylons/pyramid/pull/1541

- Avoiding timing attacks against CSRF tokens. Backported from
  https://github.com/Pylons/pyramid/pull/1574

.. _changes_1.5.2:

1.5.2 (2014-11-09)
==================

Bug Fixes
---------

- ``pyramid.wsgi.wsgiapp`` and ``pyramid.wsgi.wsgiapp2`` now raise
  ``ValueError`` when accidentally passed ``None``.
  See https://github.com/Pylons/pyramid/pull/1320

- Work around a bug introduced in Python 2.7.7 on Windows where
  ``mimetypes.guess_type`` returns Unicode rather than str for the content
  type, unlike any previous version of Python.  See
  https://github.com/Pylons/pyramid/issues/1360 for more information.

Docs
----

- Removed logging configuration from Quick Tutorial ini files except for
  scaffolding- and logging-related chapters to avoid needing to explain it too
  early.

- Clarify a previously-implied detail of the ``ISession.invalidate`` API
  documentation.

.. _changes_1.5.1:

1.5.1 (2014-05-31)
==================

- Update scaffold generating machinery to return the version of pyramid and